--- a/content/blog_one/index.mdx
+++ b/content/blog_one/index.mdx
@@ -1,12 +1,12 @@
 ---
 title: "Test Blog"
 description: "The test! Everything starts somewhere"
-image: "../../public/blog-images/emile-perron-xrVDYZRGdw4-unsplash.jpg"
+image: "../../public/blogs/emile-perron-xrVDYZRGdw4-unsplash.jpg"
 publishedAt: "2023-01-05"
 updatedAt: "2023-01-05"
 author: Stephen Sage
 isPublished: true
-tages:
+tags:
   - productivity
   - css
 ---
